# vllm-bench

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  cliff.toml  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
bench-overhead/: README.md  compare.py  run.sh
bench-overhead/mock-server/: Cargo.toml
bench-overhead/mock-server/src/: main.rs
scripts/: release.sh
src/: benchmark.rs  cli.rs  compare.rs  config.rs  error.rs  main.rs  multi_turn.rs  rate_control.rs  ready_checker.rs  sweep.rs  tiktoken.rs  tokenizer.rs
src/backends/: mod.rs  openai_chat.rs  openai_completions.rs  pooling.rs  streaming.rs
src/datasets/: hf_dataset.rs  mod.rs  multi_turn.rs  random.rs  random_mm.rs  sharegpt.rs  sonnet.rs  speed_bench.rs
src/metrics/: calculator.rs  steady_state.rs
src/output/: json.rs
