[package]
name = "mock-llm-server"
version = "0.1.0"
edition = "2021"
description = "Deterministic mock LLM server for benchmarking client overhead"

[[bin]]
name = "mock-llm-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

[profile.release]
opt-level = 3
lto = true
